Bug 424710. Make sizing of abs-pos frames whose container is the initial containing block sane and consistent with Firefox 2, while still incorrect. r+sr=dbaron